--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     <div id="quiz-container" class="w-full max-w-4xl mx-auto bg-white p-6 sm:p-8 rounded-2xl shadow-lg">
         <!-- Layar Awal (Pemilihan Topik) -->
         <div id="start-screen">
-            <h1 class="text-3xl sm:text-4xl font-bold text-center text-blue-600 mb-4">Kuis Kualitas Air Laut</h1>
+            <h1 class="text-3xl sm:text-4xl font-bold text-center text-blue-600 mb-4">Kuis KALKAL El Teklap 2025</h1>
             <p class="text-center text-gray-600 mb-8">Pilih topik untuk memulai kuis.</p>
             <div id="topic-selection" class="grid grid-cols-1 md:grid-cols-2 gap-4">
                 <!-- Tombol topik akan di-generate oleh JavaScript -->
